<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hw2try.ShowExpenceActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Expencedetail_label"
        android:id="@+id/expenceDetailsID"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_Label"
        android:id="@+id/nameID"
        android:layout_below="@+id/expenceDetailsID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/nameShowID"
        android:hint="@string/name_Show_Label"
        android:layout_alignTop="@+id/nameID"
        android:layout_toRightOf="@+id/categoryID"
        android:layout_toEndOf="@+id/categoryID" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/category_Lael"
        android:id="@+id/categoryID"
        android:layout_below="@+id/nameShowID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/categoryShowID"
        android:layout_alignTop="@+id/categoryID"
        android:layout_alignLeft="@+id/nameShowID"
        android:layout_alignStart="@+id/nameShowID"
        android:text="@string/category_show_Label"
        android:hint="@string/category_Show_" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Amount_Label"
        android:id="@+id/amountID"
        android:hint="@string/amountshow"
        android:layout_below="@+id/categoryShowID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/amountShowID"
        android:layout_alignTop="@+id/amountID"
        android:layout_alignLeft="@+id/expenceDetailsID"
        android:layout_alignStart="@+id/expenceDetailsID"
        android:text="@string/amountshow_Label"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Date_Label"
        android:id="@+id/datelabelEditExID"
        android:layout_below="@+id/amountShowID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/Date_Label" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/dateShowID"
        android:layout_below="@+id/amountShowID"
        android:layout_toEndOf="@+id/amountID"
        android:text="@string/date_show_Label"
        android:hint="@string/date_show_Label"
        android:inputType="date"
        android:layout_alignLeft="@+id/amountShowDelExID"
        android:layout_alignStart="@+id/amountShowDelExID" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/receipt_Label"
        android:id="@+id/receiptID"
        android:layout_below="@+id/dateShowID"
        android:layout_alignLeft="@+id/dateShowID"
        android:layout_alignStart="@+id/dateShowID"
        android:layout_gravity="center" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/receiptShowID"
        android:src="@drawable/browse"
        android:layout_below="@+id/receiptID"
        android:layout_toRightOf="@+id/amountID"
        android:layout_toEndOf="@+id/amountID" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstDetailID"
        android:src="@android:drawable/ic_media_rew"
        android:layout_alignTop="@+id/previousDetailID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previousDetailID"
        android:src="@android:drawable/ic_media_previous"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/firstDetailID"
        android:layout_toEndOf="@+id/firstDetailID" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/Finish_Label"
        android:id="@+id/finishID"
        android:layout_alignBottom="@+id/previousDetailID"
        android:layout_toLeftOf="@+id/nextDetailID"
        android:layout_toRightOf="@+id/previousDetailID"
        android:layout_toEndOf="@+id/previousDetailID"
        android:layout_alignTop="@+id/nextDetailID" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextDetailID"
        android:src="@android:drawable/ic_media_next"
        android:layout_alignTop="@+id/lastDetailID"
        android:layout_toLeftOf="@+id/lastDetailID"
        android:layout_toStartOf="@+id/lastDetailID" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastDetailID"
        android:src="@android:drawable/ic_media_ff"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/categoryShowID"
        android:layout_alignEnd="@+id/categoryShowID" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/nameShowID"
        android:layout_toRightOf="@+id/previousDetailID"
        android:layout_toEndOf="@+id/previousDetailID" />

</RelativeLayout>
