<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hw2try.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ad_Ex_Label"
        android:id="@+id/AddExID"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Edit_Ex_Label"
        android:id="@+id/EditExID"
        android:layout_below="@+id/AddExID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Delete_Ex_Label"
        android:id="@+id/DeleteExID"
        android:layout_below="@+id/EditExID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Show_Ex_Label"
        android:id="@+id/ShowExID"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/DeleteExID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Finish_Label"
        android:id="@+id/FinishMainID"
        android:layout_below="@+id/ShowExID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />
</RelativeLayout>
