<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.hw2try.EditExpenceActivity"
    android:focusableInTouchMode="true">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Select_Expence_Label"
        android:id="@+id/selectExEditExID"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Expence_Label"
        android:id="@+id/ExID"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ExNameEditExID"
        android:layout_below="@+id/ExID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/Ex_name_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Category_Label"
        android:id="@+id/categoryID"
        android:layout_below="@+id/ExNameEditExID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dropDownEditExID"
        android:layout_below="@+id/categoryID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dialog"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Amount_Label"
        android:id="@+id/amountID"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/dropDownEditExID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/amountShowEditExID"
        android:layout_below="@+id/amountID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/datelabelEditExID"
        android:layout_alignEnd="@+id/datelabelEditExID"
        android:inputType="numberDecimal" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/datelabelEditExID"
        android:layout_gravity="right"
        android:src="@drawable/icon"
        android:layout_alignTop="@+id/dateShowEditExID"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/browseImageEditExID"
        android:visibility="visible"
        android:src="@drawable/browse_img"
        android:layout_below="@+id/datelabelEditExID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Date_Label"
        android:id="@+id/datelabelEditExID"
        android:hint="@string/Date_Label"
        android:phoneNumber="false"
        android:password="false"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dateShowEditExID"
        android:hint="@string/date_show_Label"
        android:inputType="date"
        android:layout_below="@+id/datelabelEditExID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/selectExEditExID"
        android:layout_alignEnd="@+id/selectExEditExID" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save_Label"
        android:id="@+id/saveID"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/ExID"
        android:layout_toEndOf="@+id/ExID" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_Label"
        android:id="@+id/CancelEditExID"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/selectExEditExID"
        android:layout_alignEnd="@+id/selectExEditExID" />

</RelativeLayout>

